--- a/index.html
+++ b/index.html
@@ -8,15 +8,46 @@
 <body>
     <style>
         body{
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             flex: 1;
+            background-color: rgb(12, 93, 223);
+            color: azure;
+        }
+
+        .finalresult{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px;
+            margin: 0px;
+            font-size: 30px;
+            font-weight: bold;
+            font-style: italic;
         }
     </style>
+    
     <h1>Rock Paper Scissor Game!</h1>
-    <h2>Pleas open Console on Inspect.</h2>
+    <h2>Please open Console on Inspect.</h2>
+    <h3>Summary of each game for 5 rounds : </h3>
+    <p id="game1" style="font-weight: bold;font-style: italic;"></p>
+    <p id="htmlmessage1"></p>
+    <p id="game2" style="font-weight: bold;font-style: italic;"></p>
+    <p id="htmlmessage2"></p>
+    <p id="game3" style="font-weight: bold;font-style: italic;"></p>
+    <p id="htmlmessage3"></p>
+    <p id="game4" style="font-weight: bold;font-style: italic;"></p>
+    <p id="htmlmessage4"></p>
+    <p id="game5" style="font-weight: bold;font-style: italic;"></p>
+    <p id="htmlmessage5"></p>
+    <h2>Your Final Result is :</h2>
+    <div class="finalresult">
+        <div id="resultmessage"></div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
